...
            <point key="canvasLocation" x="3118.125" y="-513.38028169014081"/>
        </scene>
        <!--主页-->
        <scene sceneID="5h2-3U-tPU">
            <objects>
                <navigationController id="tMX-Gc-kiF" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="主页" image="home_line" selectedImage="home_shape" id="spf-aL-eXs"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="xvl-ao-hzn">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                        <color key="barTintColor" red="0.85882352939999995" green="0.85882352939999995" blue="0.85882352939999995" alpha="1" colorSpace="calibratedRGB"/>
                        <textAttributes key="titleTextAttributes">
...
                                        <integer key="value" value="5"/>
                                    </userDefinedRuntimeAttribute>
                                </userDefinedRuntimeAttributes>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N7y-gb-sgp">
                                <rect key="frame" x="63" y="243" width="474" height="30"/>
                                <state key="normal" title="登录"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
                                        <integer key="value" value="1"/>
                                    </userDefinedRuntimeAttribute>
                                    <userDefinedRuntimeAttribute type="color" keyPath="layer.borderColorFromUIColor">
                                        <color key="value" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
...
