...
    
    
    override func viewDidLoad() {
        super.viewDidLoad()
        // Do any additional setup after loading the view, typically from a nib.
        
        self.title = "投票"
        self.navigationItem.rightBarButtonItem = UIBarButtonItem(title: "发布", style: UIBarButtonItemStyle.Plain, target: self, action: #selector(CreateVoteViewController.commit(_:)))
        
        addHeaders = ["投票内容","选项"]
        // 创建表格
        tableView = UITableView.init(frame: self.view.frame, style: UITableViewStyle.Grouped)
        tableView.delegate = self
...
